# Pergamino

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/commands/: command.rs  invoker.rs  mod.rs
src/commands/graph/: add_connection.rs  add_node.rs  mod.rs  remove_connection.rs  remove_node.rs
src/graph/: mod.rs  node.rs  node_behavior.rs  types.rs  viewer.rs
src/graph/nodes/: add.rs  animation.rs  change_level.rs  choice.rs  complex.rs  conditional.rs  cutscene_toggle.rs  dialogue.rs  expression.rs  interrupt.rs  mod.rs  movement.rs  number.rs  passive_routine.rs  pathfind.rs  start.rs  teleport.rs  wait.rs
src/io/: export.rs  import.rs  mod.rs  project.rs
src/ui/: create_project.rs  editor.rs  mod.rs  theme.rs  welcome.rs  window_frame.rs
src/ui/editor/: about.rs  editor.rs  mod.rs  node_references.rs  settings.rs  variables.rs
src/ui/welcome/: create_project.rs  mod.rs  welcome.rs
src/ui/widgets/: bbcode_text_edit.rs  mod.rs  node_reference_text_edit.rs  variable_text_edit.rs
