[package]
name = "Pergamino"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["default", "image"] }
egui-file-dialog = "0.12"
egui-snarl = { version = "0.9", features = [ "serde" ]}
env_logger = { version = "0.11", features = ["auto-color", "humantime"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"