[package]
name = "Pergamino"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[dependencies]
eframe = { version = "0.33", features = ["persistence"]}
egui = "0.33"
egui_extras = { version = "0.33", features = ["default", "image"] }
egui-snarl = { version = "0.9", features = [ "serde" ]}
env_logger = { version = "0.11", features = ["auto-color", "humantime"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rfd = "0.14"
chrono = { version = "0.4", features = ["serde"] }
enum_dispatch = "0.3"